# nostpy-cli

./: README.md  create_event.py  nostpy_cli.py  pyproject.toml
.github/workflows/: python-publish.yml
nostpy_cli/: create_event.py  kind4.py  main.py
